Support floating zoom increments